responsive nd alignment issues

--- a/src/app/dialogs/patientappointment.dialog/patientappointment.dialog.component.scss
+++ b/src/app/dialogs/patientappointment.dialog/patientappointment.dialog.component.scss
@@ -42,3 +42,7 @@ textarea::-webkit-input-placeholder {
   background-color: #f5f5f5;
   height: 85px;
 }
+.modal-body {
+  max-height: calc(90vh - 200px);
+  overflow-y: auto;
+}
